2024-01-17T16:11:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7558557408 # 32
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-17
* notice: last 14d: unq all: 5 16
* notice: prev accum: outdated-unq outdated-all / unq all: 290 1019 / 296 1039
* notice: next accum: outdated-unq outdated-all / unq all: 291 1023 / 296 1039
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-03] / []

2024-01-12T08:11:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7499533664 # 16
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-12
* notice: last 14d: unq all: 6 20
* notice: prev accum: outdated-unq outdated-all / unq all: 290 1019 / 295 1037
* notice: next accum: outdated-unq outdated-all / unq all: 290 1019 / 296 1039
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-01-12]

2024-01-12T00:42:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7496345794 # 15
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-12
* notice: last 14d: unq all: 5 18
* notice: prev accum: outdated-unq outdated-all / unq all: 290 1019 / 294 1035
* notice: next accum: outdated-unq outdated-all / unq all: 290 1019 / 295 1037
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-01-11]

2024-01-10T08:11:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7472015623 # 10