@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-17T16:11:27Z",
+  "timestamp" : "2024-01-18T00:41:28Z",
   "count_outdated" : 1023,
   "uniques_outdated" : 291,
-  "count" : 1039,
-  "uniques" : 296,
+  "count" : 1043,
+  "uniques" : 298,
   "views" : [
     {
       "timestamp": "2024-01-05T00:00:00Z",
@@ -49,6 +49,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-17T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
