@@ -1,6 +1,6 @@
 {
-  "count": 16,
-  "uniques": 5,
+  "count": 20,
+  "uniques": 7,
   "views": [
     {
       "timestamp": "2024-01-05T00:00:00Z",
@@ -26,6 +26,11 @@
       "timestamp": "2024-01-12T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2024-01-17T00:00:00Z",
+      "count": 4,
+      "uniques": 2
     }
   ]
 }
