@@ -1,3 +1,12 @@
+2024-01-18T00:41:28Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7563655869 # 33
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-18
+* notice: last 14d: unq all: 7 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 291 1023 / 296 1039
+* notice: next accum: outdated-unq outdated-all / unq all: 291 1023 / 298 1043
+* notice: prev exec diff / last date diff / accum: unq all: +2 +4 -0 -0 / +2 +4 -0 -0 / 2 4
+* notice: removed / changed dates: [] / [2024-01-17]
+
 2024-01-17T16:11:27Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7558557408 # 32
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-17
